remove logged in as text and fix create list component rendering issue on mobile

--- a/client/src/components/CreateList.css
+++ b/client/src/components/CreateList.css
@@ -8,11 +8,22 @@
   width: 150px;
   background-color: #D61C4E;
 }
+.usernameLogout{
+  width:350px;
+  height:50px;
+  display:flex;
+  align-items:center;
+  margin-top:20px;
+  justify-content:space-between;
+}
 @media screen and (max-width: 600px) {
   .createListTopContainer {
-    width: 300px;
+    width: 350px;
   }
   .newListInput {
     width: 236px;
+  }
+  .usernameLogout{
+    width: 300px;
   }
 }
